


############################################################################################





Version 1.5
	- Version 1.5.0

Developer Version
	- 1.0.1 Development
	- 1.0.2 Development
	- 1.0.3 Development
	- 1.0.4 Development
	- 1.0.5 Development
	- 1.0.6 Development
	- 1.0.7 Development
	- 1.5.0 Stable
	- 1.5.1 Stable
	- 1.5.2 Stable
	- 1.5.3 Stable
	- 1.5.4 Stable
	- 1.5.5 Stable

Building Steps: 2741



 Version 1.5.5 Stable
-----------------------------------------------------------------

 - bug #0000148: 

 - security fixed: 

 - bug fixed: searchclass cannot search on a MS SQL Server

 - changed: 

 - added: 




Version 1.5.4 Stable
-----------------------------------------------------------------

 - bug #0000148: you cannot add more then one comment on a news:
                 drop the primary key for the comments table
 - bug #0000149: konqueror display error
 - bug #0000151: incorrect sql string; search result has also protected
                 and privat content files

 - security fixed: 

 - bug fixed: tree view for the webpage tree (backend)
 - bug fixed: the language selector selects not the lcorrect language in the sidemenu editor
 - bug fixed: all documents in the document list have the lang variable
 - bug fixed: internal downloads has the lang variable in the url
 - bug fixed: workaround fix for the gd 256 color bug
 - bug fixed: 

 - changed: impressum (publishing form) and memberlist now with the html title formater
 - changed: language changer now with the component item in the link
 - changed: error on looking on a album with a not existing ID
 - changed: 

 - added: 




 Version 1.5.3 Stable
-----------------------------------------------------------------

 - bug #0000122: 

 - security fixed: 

 - bug fixed: seo with : now with the lang var
 - bug fixed: language setting for the frontpage is wrong
 - bug fixed: html entitie encode is wrong (now with another
              decrypotion if php is 5.2.0 or newer)