@@ -3,11 +3,11 @@
 	<layout_chooser>0</layout_chooser>
 	<side_links>0</side_links>
 	<login>0</login>
-	<side_category>1</side_category>
-	<side_archives>1</side_archives>
-	<syndication>1</syndication>
-	<newsletter>0</newsletter>
-	<search>1</search>
+	<side_category>0</side_category>
+	<side_archives>0</side_archives>
+	<syndication>0</syndication>
+	<newsletter>1</newsletter>
+	<search>0</search>
 	<sidebar>0</sidebar>
 	<poll>0</poll>
 
